--- a/public/search/index.html
+++ b/public/search/index.html
@@ -348,7 +348,7 @@ Initial setup Search depends on additional output content type of JSON in config
   
   
     
-    <li><a class=" list-link" href="/posts/selenium/" title="Infinite WPM with Python">Infinite WPM with Python</a></li>
+    <li><a class=" list-link" href="/posts/kernel_ridge_regression/" title="Kernelize Ridge Regression">Kernelize Ridge Regression</a></li>
   
 
 
